2011-11-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* console.c: Added a some error checks and fixed a error message.

2011-11-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1924/cpukit
	* bootcard.c: Update due to API changes.

2011-11-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/utility.h: Fixed some casts.
	* include/irq-generic.h: Define bsp_interrupt_handler_index_type
	conditionally.

2011-11-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* console_private.h: Removed Console_Port_Minor declaration.
	* console.c: Define console_initialized as static.

2011-11-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1945/cpukit
	* umon/tfsDriver.c: Replace rtems_off64_t with off_t.

2011-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console.c: Include <rtems/error.h> for rtems_panic().

2011-10-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console.c: RTEMS_DEBUG is a define, not a variable.

2011-10-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	PR 1917/bsps
	* console.c: Modifications to add dynamic tables for libchip serial
	drivers.
	* console_control.c, console_private.h, console_read.c,
	console_select.c, console_write.c: New files.

2011-08-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c: Revert patch and add comment clarifying code and need for
	cast.

2011-08-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* bootcard.c: Correct printk() format.

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/uart-output-char.h, src/uart-output-char.c: Support for
	getchark().

2011-07-13	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1824/cpukit
	* bootcard.c, bspclean.c, include/bootcard.h: Return exit/shutdown
	status back to boot_card(). boot_card() propagates this to
	bsp_cleanup() and returns it to the assembly that started the
	application.

2011-03-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* console.c: Make device file optional.
