@@ -1,3 +1,8 @@
+2011-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* umon/tfsDriver.c: Include <rtems/umon.h> (Missing prototype).
+	* umon/monlib.c: Make DisableMonLock, EnableMonLock static.
+
 2011-11-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>
 
 	* console.c: Added a some error checks and fixed a error message.
